[package]
name = "pfx"
authors = ["Árpád Goretity <arpad.goretity@gmail.com>"]
description = "A prefix tree (map and set), implemented without any unsafe"
repository = "https://github.com/H2CO3/pfx"
readme = "README.md"
license = "MIT"
version = "0.3.1"
edition = "2021"
rust-version = "1.77.0"
keywords = ["prefix", "prefix-tree", "set", "map"]
categories = ["data-structures", "algorithms", "rust-patterns"]
documentation = "https://docs.rs/pfx"

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
